KubeDeploy/taskapp_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp
    app.kubernetes.io/instance: webapp
  name: myapp
  namespace: taskapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: 'docker.io/sainadh086/mytaskapp:v7'
        ports:
          - containerPort: 8080
