KubeDeploy/mongo_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: taskapp
  labels:
    env: dev
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb
  type: NodePort
