KubeDeploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: taskapp
    app.kubernetes.io/instance: webapp
    env: dev
  name: taskapp-service
  namespace: taskapp
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myapp
