KubeDeploy/ingresshost.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashborad-ingress
  namespace: kubernetes-dashboard
spec:
  rules: #ingress rules
  - host: dashboard.com #url name to connect
    http: #just a request forwader
      paths: #it connects to the svc and also used to write contexts of the URLS
      - pathType: Prefix
        path: "/taskapp" 
        backend:
          service:
            name: taskapp-service
            port: 
              number: 8080
